--- a/test/fixtures/basic/expected/index.html
+++ b/test/fixtures/basic/expected/index.html
@@ -1,6 +1,23 @@
-<!DOCTYPE html><html lang="en"><head><title>Jade</title><script type="text/javascript">if (foo) {
-   bar(1 + 5)
-}</script></head><body><h1>Jade - node template engine</h1><div id="container" class="col"><p>You are amazing</p><p>Jade is a terse and simple
-templating language with a
-strong focus on performance
-and powerful features.</p></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Jade</title>
+    <script type="text/javascript">
+      if (foo) {
+         bar(1 + 5)
+      }
+    </script>
+  </head>
+  <body>
+    <h1>Jade - node template engine</h1>
+    <div id="container" class="col">
+      <p>You are amazing</p>
+      <p>
+        Jade is a terse and simple
+        templating language with a
+        strong focus on performance
+        and powerful features.
+      </p>
+    </div>
+  </body>
+</html>
