Ignore partials, and allow includes

--- a/test/fixtures/basic/expected/index.html
+++ b/test/fixtures/basic/expected/index.html
@@ -18,6 +18,7 @@
         strong focus on performance
         and powerful features.
       </p>
+      <p>This file is included.</p>
     </div>
   </body>
 </html>
