Switch from Jade to Pug.js

--- a/test/fixtures/subfolder/expected/index.html
+++ b/test/fixtures/subfolder/expected/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jade</title>
+    <title>Hello World</title>
   </head>
   <body><div class="blog-post"><h1>Hello World!</h1>
 <p>This is a test.</p>
