--- a/test/fixtures/basic/expected/index.html
+++ b/test/fixtures/basic/expected/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jade</title>
+    <title>Hello World</title>
     <script type="text/javascript">
       if (foo) {
          bar(1 + 5)
@@ -9,11 +9,11 @@
     </script>
   </head>
   <body>
-    <h1>Jade - node template engine</h1>
-    <div id="container" class="col">
+    <h1>Pug</h1>
+    <div class="col" id="container">
       <p>You are amazing</p>
       <p>
-        Jade is a terse and simple
+        Pug is a terse and simple
         templating language with a
         strong focus on performance
         and powerful features.
