--- a/test/fixtures/convention-defaultLayout/expected/index.html
+++ b/test/fixtures/convention-defaultLayout/expected/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jade</title>
+    <title>Hello World</title>
     <script type="text/javascript">
       if (foo) {
          bar(1 + 5)
